# mkcrew

./: .gitignore  README.md  build_app.ps1  install.bat  install.ps1  make_icon.py  pyproject.toml
src/mkcrew/: __init__.py  _run.py  addworkspace.py  agent.py  app.py  ask_cli.py  cli.py  config.py  console.py  coreview.py  daemon.py  done_cli.py  eventlog.py  filesview.py  finish_hook.py  frozen.py  jobs.py  layouts.py  panic.py  profiles.py  projections.py  prompts.py  psmux.py  safety.py  sessions.py  studio.py  studio_ui.html  teamconfig.py  templates.py  transcript.py  tui.py  verify.py
src/mkcrew/skills/domain-playbooks/: SKILL.md
src/mkcrew/skills/mkcrew-worker/: SKILL.md
src/mkcrew/skills/safe-agent-delegation/: SKILL.md
src/mkcrew/skills/senior-developer-loop/: SKILL.md
src/mkcrew/skills/task-router/: SKILL.md
src/mkcrew/skills/team-self-improvement/: SKILL.md
tests/: conftest.py  test_addworkspace.py  test_agent.py  test_app.py  test_ask_cli.py  test_cli.py  test_config.py  test_console.py  test_coreview.py  test_daemon.py  test_done_cli.py  test_eventlog.py  test_filesview.py  test_finish_hook.py  test_forward_delivery.py  test_frozen.py  test_jobs.py  test_layouts.py  test_panic.py  test_pickfolder.py  test_profiles.py  test_projections.py  test_prompts.py  test_providers.py  test_psmux.py  test_psmux_split.py  test_safety.py  test_sessions.py  test_skills_install.py  test_studio.py  test_teamconfig.py  test_transcript.py  test_tui.py  test_verify.py
